# developer_assistant

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  README.EN.md  README.md  pyproject.toml  weaviate-docker-compose.yml
da/: logger.py
da/document/: __init__.py
da/document/parser/: base.py  fastapi.py  langchain.py  python.py  w3school.py
da/document/splitter/: __init__.py  base.py  interface.py  markdown.py
da/ingest/: base.py  config.json  config.py  fastapi.py  langchain_ingester.py  main.py  python.py  w3school.py
da/llm/: __init__.py  bailian.py  constant.py  deepseek.py  exception.py  interface.py  ollama.py  openai.py  siliconflow.py
da/starter/: authorizer.py  callback.py  chain.py  history.py  main.py
da/starter/history/: __init__.py  limit_chat_message.py
da/starter/models/: __init__.py  base.py  base.py2  conversation.py  plugin.py  user.py
da/starter/prompt/: __init__.py  generation_question.py  rephrase.py  response.py
da/starter/retriever/: find_doc_data_sets.py  find_doc_multi_query.py  retriever.py
da/starter/routes/: __init__.py  conversation.py  user.py
da/vectorstore/: __init__.py  cleaner.py  query.py  vectorstore.py  weaviate_collection_config.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/: client.ts  conversation.ts  user.ts
frontend/app/components/: AnswerHeaderToolUI.tsx  ChatMessageBubble.tsx  ChatWindow.tsx  Conversation.tsx  EmptyState.tsx
frontend/app/contexts/: GraphContext.tsx  utils.ts
frontend/app/hooks/: useConversation.tsx  usePersistentState.tsx  useThreads.tsx  (+1 more)
(+3 files in other folders)
